[package]
name = "wb-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
bcrypt = "0.13.0"
jsonwebtoken = "8.1.1"
once_cell = "1.14.0"
sea-orm = { version = "0.9.2", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
chrono = "0.4.22"
validator = { version = "0.16", features = ["derive"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
warp = "0.3.2"
serde = "1.0.144"
serde_yaml = "0.9.11"
serde_derive = "1.0.144"
tokio = { version = "1.21.0", features = ["full"] }